fix: make demo timetable generation complete